Update npm location

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-  - source: .
-    destination: /home/ec2-user/Ionic2App
+  - source: /*
+    destination: /home/ec2-user/Ionic2App/
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
