--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
     destination: /home/ec2-user/Ionic2App/
 hooks:
   AfterInstall:
-    - location: /home/ec2-user/Ionic2App/scripts/install_dependencies
+    - location: /scripts/install_dependencies
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: /home/ec2-user/Ionic2App/scripts/start_server
+    - location: /scripts/start_server
       timeout: 300
       runas: root
