--- a/appspec.yml
+++ b/appspec.yml
@@ -2,13 +2,13 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/Ionic2App/
+    destination: /home/ec2-user/Ionic2App
 hooks:
   AfterInstall:
-    - location: /home/ec2-user/scripts/install_dependencies.sh
+    - location: scripts/install_dependencies.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: /home/ec2-user/scripts/start_server.sh
+    - location: scripts/start_server.sh
       timeout: 300
       runas: root
