--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "2.4.8",
     "@ionic-native/core": "3.1.0",
     "@ionic-native/native-storage": "^3.4.4",
+    "@ionic-native/social-sharing": "^3.4.4",
     "@ionic-native/splash-screen": "3.1.0",
     "@ionic-native/sqlite": "^3.4.4",
     "@ionic-native/status-bar": "3.1.0",
