--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awsSolArchNew",
+  "name": "awsSolArchPro",
   "author": "Cloud Pros",
   "homepage": "https://www.facebook.com/awsarchitect",
   "private": true,
