--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
-    "@ionic-native/core": "3.1.0",
+    "@ionic-native/core": "^3.12.1",
     "@ionic-native/native-storage": "^3.4.4",
     "@ionic-native/social-sharing": "^3.4.4",
     "@ionic-native/splash-screen": "3.1.0",
@@ -28,6 +28,7 @@
     "@ionic/storage": "^2.0.1",
     "ionic-angular": "2.3.0",
     "ionicons": "3.0.0",
+    "ng2-simple-timer": "^1.3.1",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.7.2"
