--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^1.3.1",
+    "@ionic/cli-plugin-ionic-angular": "1.3.2",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
