--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.1",
-        "@ionic/cli-plugin-ionic-angular": "1.3.2",
+        "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "ionic": "3.9.2",
         "typescript": "2.0.9"
     },
     "cordovaPlugins": [
