--- a/package.json
+++ b/package.json
@@ -26,19 +26,20 @@
         "@ionic-native/sqlite": "^3.4.4",
         "@ionic-native/status-bar": "3.1.0",
         "@ionic/storage": "^2.0.1",
-        "ionic-angular": "2.3.0",
-        "ionicons": "3.0.0",
-        "ng2-simple-timer": "^1.3.1",
-        "rxjs": "5.0.1",
-        "sw-toolbox": "3.4.0",
-        "zone.js": "0.7.2",
+        "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "1.0.5",
         "cordova-plugin-device": "1.1.4",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.1",
         "cordova-plugin-whitelist": "1.3.1",
         "cordova-sqlite-storage": "~2.0.3",
-        "ionic-plugin-keyboard": "~2.2.1"
+        "ionic-angular": "2.3.0",
+        "ionic-plugin-keyboard": "~2.2.1",
+        "ionicons": "3.0.0",
+        "ng2-simple-timer": "^1.3.1",
+        "rxjs": "5.0.1",
+        "sw-toolbox": "3.4.0",
+        "zone.js": "0.7.2"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.1",
