--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "ng2-simple-timer": "^1.3.1",
         "rxjs": "5.0.1",
         "sw-toolbox": "3.4.0",
-        "zone.js": "0.7.2"
+        "zone.js": "0.7.2",
+        "cordova-android": "~6.1.2"
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.1",
@@ -73,6 +74,10 @@
             "cordova-plugin-whitelist": {},
             "cordova-sqlite-storage": {},
             "ionic-plugin-keyboard": {}
-        }
+        },
+        "platforms": [
+            "android",
+            "ios"
+        ]
     }
 }
