--- a/package.json
+++ b/package.json
@@ -43,9 +43,8 @@
         "cordova-android": "~6.1.2"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "^1.3.1",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
-        "ionic": "3.13.0",
+        "@ionic/app-scripts": "1.1.4",
+        "ionic": "3.17.0",
         "typescript": "2.0.9"
     },
     "cordovaPlugins": [
