--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/status-bar": "3.1.0",
     "@ionic/storage": "^2.0.1",
     "cordova-android": "^6.2.2",
-    "cordova-ios": "^4.4.0",
+    "cordova-ios": "4.4.0",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
-    "ionic": "3.18.0",
+    "ionic": "3.19.0",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
