--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
     "@ionic-native/core": "^3.12.1",
+    "@ionic-native/in-app-browser": "^4.5.2",
     "@ionic-native/native-storage": "^3.4.4",
     "@ionic-native/social-sharing": "^3.4.4",
     "@ionic-native/splash-screen": "3.1.0",
@@ -30,6 +31,7 @@
     "cordova-ios": "4.4.0",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.1",
     "cordova-plugin-whitelist": "^1.3.1",
@@ -72,7 +74,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "cordova-sqlite-storage": {},
-      "ionic-plugin-keyboard": {}
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
