--- a/package.json
+++ b/package.json
@@ -10,44 +10,58 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/compiler-cli": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@ionic-native/core": "^3.12.1",
-    "@ionic-native/in-app-browser": "^4.5.2",
-    "@ionic-native/native-storage": "^3.4.4",
+    "@angular/common": "5.0.3",
+    "@angular/compiler": "5.0.3",
+    "@angular/compiler-cli": "5.0.3",
+    "@angular/core": "5.0.3",
+    "@angular/forms": "5.0.3",
+    "@angular/http": "5.0.3",
+    "@angular/platform-browser": "5.0.3",
+    "@angular/platform-browser-dynamic": "5.0.3",
+    "@firebase/auth": "^0.3.3",
+    "@ionic-native/core": "^4.4.0",
+    "@ionic-native/in-app-browser": "^4.11.0",
     "@ionic-native/social-sharing": "^3.4.4",
-    "@ionic-native/splash-screen": "3.1.0",
-    "@ionic-native/sqlite": "^3.4.4",
-    "@ionic-native/status-bar": "3.1.0",
-    "@ionic/storage": "^2.0.1",
-    "cordova-android": "^6.2.2",
-    "cordova-ios": "4.4.0",
-    "cordova-plugin-console": "^1.0.5",
+    "@ionic-native/splash-screen": "4.4.0",
+    "@ionic-native/status-bar": "^4.4.0",
+    "@ionic-native/stripe": "^4.5.3",
+    "@ionic/pro": "1.0.16",
+    "@ionic/storage": "2.1.3",
+    "@types/lodash": "^4.14.103",
+    "angular-google-place": "0.0.3",
+    "angularfire2": "5.0.0-rc.3",
+    "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-browsertab": "^0.2.0",
+    "cordova-plugin-buildinfo": "^2.0.1",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-inappbrowser": "^1.7.2",
+    "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.1",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.0.4",
-    "ionic-angular": "2.3.0",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-stripe": "^1.5.3",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "file-system": "^2.2.2",
+    "firebase": "^4.10.1",
+    "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "ng2-simple-timer": "^1.3.1",
-    "rxjs": "5.0.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2"
+    "rxjs": "5.5.2",
+    "solc": "^0.4.19",
+    "sw-toolbox": "3.6.0",
+    "utf8": "^3.0.0",
+    "web3": "^0.17.0-alpha",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
-    "ionic": "3.19.0",
-    "typescript": "2.0.9"
+    "@ionic/app-scripts": "3.1.8",
+    "typescript": "2.4.2"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
